

2024-11-10 Franz Holzinger  <franz@ttproducts.de>
	* delete not working hook class FrontendHooks tslib/class.tslib_fe.php configArrayPostProc, because the TypoScript is not passed by the parent object
	* initialize FEData in the Middleware

2023-12-30 Franz Holzinger  <franz@ttproducts.de>
	* use rector to improve the PHP code

2023-08-02 Franz Holzinger  <franz@ttproducts.de>
    * remove constants DIV2007_EXT, DIV2007_LANGUAGE_SUBPATH and TSLIB_FETCE_EXT

2023-03-02 Franz Holzinger  <franz@ttproducts.de>
    * Breaking no. #96287: use fetchAssociative instead of fetch

2023-02-10 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 11 and 12

2022-04-07 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 8.5 and PHP 8

2021-11-17 Franz Holzinger <franz@ttproducts.de>
    * bugfix: locationData must not be required
    * bugfix TYPO3 10: The Middleware must be executed after typo3/cms-frontend/prepare-tsfe-rendering .

2021-10-22 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Middleware must provide the global TSFE object of type \TYPO3\CMS\Frontend\Controller\TypoScriptFrontendController

2021-02-19 Franz Holzinger <franz@ttproducts.de>
    * compatibility TYPO3 10.4: replace $GLOBALS['TSFE']->getUniqueId($formName) by addition of bin2hex(random_bytes(16)) at the end of the form name. This however leads to a problem. The formname is an id which must be a fix name. So the form name will remain now unchanged.
    * Remove configuration option arrayReturnMode, because only a string must be returned to TYPO3.

2020-07-29 Franz Holzinger <franz@ttproducts.de>
    * move method calcDoublePostKey from class TypoScriptFrontendDataController into
 JambageCom\TslibFetce\Utility\FormUtility
    * move method checkDoublePostExist from class TypoScriptFrontendDataController into
 JambageCom\TslibFetce\Utility\FormUtility

2020-02-02 Franz Holzinger <franz@ttproducts.de>
    * bugfix: class JambageCom\TslibFetce\Hooks\FrontendHooks was not found
