@@ -22,8 +22,8 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": "^12",
-    "jambagecom/div2007": "^2.0"
+    "typo3/cms-core": "^12 || ^13",
+    "jambagecom/div2007": "^2.2"
   },
   "autoload": {
     "psr-4": {
